--- a/client/src/Pages/Landing/Landing.css
+++ b/client/src/Pages/Landing/Landing.css
@@ -41,8 +41,22 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: 7px 5px 0px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .itemPicture {
     width: 225px;
+}
+
+.itemName {
+    width: 100%;
+    text-align: center;
+}
+
+.priceQuantity {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30px;
 }
