--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -1,9 +1,32 @@
 .nav {
     width: 100vw;
-    height: 100px;
+    height: 120px;
     border: 1px solid black;
     display: flex;
     justify-self: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    background-color: white;
+}
+
+.nav input {
+    width: 55%;
+    text-align: center;
+    height: 40px;
+    font-size: x-large;
+    margin: 0 auto;
+}
+
+.navImage {
+    width: 180px;
+    margin: 0 30px;
+}
+
+.rightNav {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    width: 270px;
+    margin-left: auto;
+    margin-right: 0;
 }
