--- a/client/src/Pages/Listings/Listings.css
+++ b/client/src/Pages/Listings/Listings.css
@@ -13,42 +13,53 @@
 
 .listingContainer {
     width: 80%;
-    height: 700px;
+    height: 475px;
     border: 3px solid black;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     margin: 20px 0 50px;
     padding: 30px;
+    display: flex;  
 }
 
     /* ListItem Sub-Component */
 
     .listItem {
-        width: 100%;
-        height: 90px;
-        border: 2px solid black;
+        width: 250px;
+        height: 450px;
+        border: 3px solid black;
         border-radius: 20px;
         margin: 10px 0;
-        display: flex;
-        align-items: center;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        margin-right: 12px;
+    }
 
+    .listImage {
+        width: 250px;
+        border-radius: 20px;
     }
 
     .itemTitle {
-        height: 100%;
-        width: fit-content;
-        display: flex;
-        align-items: center;
-        margin-left: 20px;
+        width: 100%;
+        text-align: center;
     }
 
     .cost {
-        width: fit-content;
-        margin-left: auto;
-        margin-right: 30px;
+        height: 50px;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 7px;
     }
 
-    .delete {
-        margin-right: 20px;
+    .cost h4 {
+        margin: 0;
+    }
+
+    .modify {
+        display: flex;
+        justify-content: space-evenly;
+        height: 50px;
     }
 
 /* ListingHeader Component */
@@ -85,8 +96,8 @@
 }
 
 .newItemContainer {
-    width: 80%;
-    height: 400px;
+    width: 400px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,7 +107,7 @@
 
 .newItemForm {
     width: fit-content;
-    height: 50%;
+    height: fit-content;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
@@ -104,6 +115,7 @@
 .input {
     width: 100%;
     display: flex;
+    margin: 10px 0;
 }
 
 .input input {
