--- a/client/src/Pages/SignInPage/SignIn.css
+++ b/client/src/Pages/SignInPage/SignIn.css
@@ -3,31 +3,42 @@
     background-color: rgb(255, 255, 255);
     width: 100%;
     display: flex;
-    height: 500px;
+    height: 669px;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 /* Container styling */
 #formHolder {
-    margin: auto;
-    background-color: white;
     width: 33%;
     float: left;
     border-right: solid black;
     border-width: 3px;
+    padding: 5% 10% 12.5%;
     /* border-bottom: solid black;
     border-top: solid black; */
-    padding: 5% 10% 7.5%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    
+
     /* padding-top: 50%; */
     /* justify-content: center; */
 }
 
-#rightImage {
-    margin: auto;
+.innerDivs {
     background-color: white;
+}
+
+.holder {
+    width: 1100px;
+    height: 500px;
+}
+
+#rightImage {
     width: 44%;
-    float: right;    
+    float: right;  
+    display: flex;
+    align-items: center;  
+    height: 90%;
 }
 
 #logo {
@@ -35,13 +46,13 @@
 }
   
 /* Heading styling */
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: black;
-  /* background-color: aqua; */
-}
   
+#test {
+    text-align: center;
+    margin-bottom: 35px;
+    color: black;
+}
+
 /* Input styling */
 label {
     display: block;
@@ -82,9 +93,9 @@ label {
     border: 3px black;
 } */
 
-/* #signInButton {
-    back
-} */
+#signInButton {
+    margin-top: 10px;
+}
 
 /* button:hover {
     back
