--- a/client/src/Components/SingleItem/SellerInfo.css
+++ b/client/src/Components/SingleItem/SellerInfo.css
@@ -1,6 +1,8 @@
 .seller-info-bar { 
+    
     display: flex;
-    width: 600px; 
+    height: 200px;
+    width: 650px; 
     /* align-items: right; */
     justify-content: flex-start;
     /* color: grey; */
@@ -10,7 +12,7 @@
     margin-top: 50px;
     /* margin-left: 500px; */ 
     /* right: 100px;  */
-    border-radius: 25px;
+    border-radius: 15px;
 }
 
 .profile-picture { 
