updated listing to size images

--- a/client/src/Pages/Listings/Listings.css
+++ b/client/src/Pages/Listings/Listings.css
@@ -38,6 +38,8 @@
     .listImage {
         width: 250px;
         border-radius: 20px;
+        height: 250px;
+        object-fit: cover;
     }
 
     .itemTitle {
