--- a/client/src/Pages/CheckoutPage/CheckoutPage.css
+++ b/client/src/Pages/CheckoutPage/CheckoutPage.css
@@ -49,10 +49,11 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    background-color: #8D8A8A;
 }
 
 #checkout-box {
-    background-color: lightcoral;
+    background-color: #D9D9D9;
     display: grid;
     grid-template-columns: 1fr;
 }
