--- a/client/src/Components/SingleItem/SellerInfo.css
+++ b/client/src/Components/SingleItem/SellerInfo.css
@@ -8,7 +8,7 @@
     /* color: grey; */
     float: right;
     border: 5px;
-    background-color: grey;
+    background-color: rgb(66, 185, 232);
     margin-top: 50px;
     /* margin-left: 500px; */ 
     /* right: 100px;  */
