--- a/client/src/Components/Checkout/ItemList.css
+++ b/client/src/Components/Checkout/ItemList.css
@@ -2,3 +2,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
+.grid_item {
+    margin: 0 auto;
+    justify-content: center;
+}
