Utillized state variable for item image

--- a/client/src/Pages/SingleItem/SingleItem.css
+++ b/client/src/Pages/SingleItem/SingleItem.css
@@ -3,6 +3,8 @@
     grid-template-columns: 1fr 1fr; 
     background-color: white;
     column-gap: 1em;
+    width: 100vw; 
+
 }
 .singleitem h2 { 
     /* display: flex; */
