fixed landing images

--- a/client/src/Pages/Landing/Landing.css
+++ b/client/src/Pages/Landing/Landing.css
@@ -50,7 +50,7 @@
 }
 
 .itemPicture {
-    width: 225px;
+    width: 250px;
     height: 225px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
@@ -66,5 +66,5 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 0 30px;
+    margin: 0 30px 15px;
 }
