--- a/client/src/Pages/CheckoutPage/CheckoutPage.css
+++ b/client/src/Pages/CheckoutPage/CheckoutPage.css
@@ -50,12 +50,14 @@
     display: flex;
     flex-direction: column;
     background-color: #8D8A8A;
+    /* padding-left: 8rem; */
 }
 
 #checkout-box {
     background-color: #D9D9D9;
     display: grid;
     grid-template-columns: 1fr;
+    /* padding-left: 1rem; */
 }
 
 #buttons {
