--- a/client/src/Pages/SellItem/SellItem.css
+++ b/client/src/Pages/SellItem/SellItem.css
@@ -57,6 +57,8 @@
     border-radius: 20px;
     border-color: black;
     border-width: 15px;
+    width: 400px;
+    height: 400px;
 }
 
 .product_box {
@@ -77,6 +79,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 0.5rem;
+    width: 300px;
+    height: 300px;
     /* padding-top: 2rem; */
 }
 
