Mostly finalized SellItem and Checkout and Error Handling to main.jsx
React and CSS

--- a/client/src/Components/Checkout/PhotoList.css
+++ b/client/src/Components/Checkout/PhotoList.css
@@ -1,1 +1,14 @@
- 
+ img {
+    width: 200px;
+    height: 200px;
+ }
+
+ #parent_div {
+    position: relative;
+ }
+
+ /* #delete_btn {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+ } */
