--- a/client/src/Components/Checkout/ItemList.css
+++ b/client/src/Components/Checkout/ItemList.css
@@ -1,10 +1,9 @@
-#item_grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+#item {
+    display: flex;
+    flex-direction: row;
 }
 
-.grid_item {
+.item_flex_box{
     margin: 0 auto;
-    justify-content: center;
-    padding-right: 3rem;
+    display: flex;
 }
