--- a/client/src/Pages/CheckoutPage/CheckoutPage.css
+++ b/client/src/Pages/CheckoutPage/CheckoutPage.css
@@ -8,32 +8,83 @@
     margin: auto;
 }
 
-#photo_box {
+#photo_box_test {
     background-color: #FFFFFF;
     border-radius: 20px;
     border-color: black;
     border-width: 15px;
-    overflow-x: hidden;
-    overflow-y: scroll;
     color: black;
+
+    justify-items: center;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
+    /* repeat repeats the dimensions in the second param */
+    gap: 1rem;
+    width: 100%;
+    /* When I fill up my columns then I get a new row */
+    /* Fixes issues */
+    overflow: scroll;
+    /* if elements are not present on the screen then scroll to access the rest of them */
+    height: 20rem;
+    width: 30rem;
+    margin-left: 8rem;
+    margin-top: 1.5rem;
 }
 
-#photo_box > * {
+#checkout_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 5rem;
+}
+
+#photo_box_test > * {
+    height: 150px;
+    display: flex;
+    width: 55%;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    /* Have the width being decreased to 35% of original is necessary to make the overloading possible */
+}
+
+#item-box {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: #D9D9D9;
+    margin: auto;
+    overflow: scroll;
+    height: 20rem;
+    width: 20rem;
+}
+
+#yo {
+    background-color: #8D8A8A;
+    height: 21rem;
+    width: 22rem;
+    padding-top: 1rem;
+
+}
+
+#price_box {
+    display: flex;
+}
+
+#price_box > * {
+    margin: 0 auto;
+}
+
+#price_box > h6 {
+    color: white;
+}
+
+#item-box > * {
     height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     border: 1px solid black;
-}
-
-#item-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    margin: auto;
 }
 /* The contents of the title of the photo itself*/
 /* CSS responsible for styling the id of sell_item_page which is the div id that the entire page is underneath it */
@@ -46,17 +97,17 @@
     display: flex;
     flex-direction: row;
     margin-top: 1rem;
+    margin-left: 27.25rem;
 }
 
 #button_grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 17rem;
+    display: flex;
     margin: auto;
 }
 
 button {
     width: 10rem;
+    margin: 0 auto;
 }
 
 
