--- a/client/src/Pages/CheckoutPage/CheckoutPage.css
+++ b/client/src/Pages/CheckoutPage/CheckoutPage.css
@@ -97,7 +97,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 1rem;
-    margin-left: 27.25rem;
+    margin-right: 6rem;
 }
 
 #button_grid {
