--- a/client/src/Pages/CheckoutPage/CheckoutPage.css
+++ b/client/src/Pages/CheckoutPage/CheckoutPage.css
@@ -12,14 +12,14 @@
     background-color: #FFFFFF;
     border-radius: 20px;
     border-color: black;
-    border-width: 15px;
-    color: black;
+    border-width: 2rem;
+    background-color: #E7E5E5;
 
     justify-items: center;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    /* repeat repeats the dimensions in the second param */
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(auto-fit, 11rem);
     gap: 1rem;
     width: 100%;
     /* When I fill up my columns then I get a new row */
@@ -27,9 +27,15 @@
     overflow: scroll;
     /* if elements are not present on the screen then scroll to access the rest of them */
     height: 20rem;
-    width: 30rem;
-    margin-left: 8rem;
-    margin-top: 1.5rem;
+    width: 24rem;
+    margin-left: 11rem;
+    margin-top: 0.5rem;
+    padding-top: 0.75rem;
+    padding-bottom: 1.2rem;
+    padding-left: 1rem;
+    border-color: black;
+    border-width: 0.2rem;
+    border-style: solid;
 }
 
 #checkout_grid {
@@ -41,29 +47,47 @@
 #photo_box_test > * {
     height: 150px;
     display: flex;
-    width: 55%;
+    width: 90%;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    border-color: black;
+    border-width: 0.2rem;
+    border-style: solid;
+    background-color: #FCFCFC;
+    border-radius: 20px;
     /* Have the width being decreased to 35% of original is necessary to make the overloading possible */
 }
 
 #item-box {
     display: grid;
     grid-template-columns: 1fr;
-    background-color: #D9D9D9;
+    background-color: #FDFDFD;
     margin: auto;
     overflow: scroll;
     height: 20rem;
     width: 20rem;
+    border-radius: 20px;
+    border-color: black;
+    border-width: 0.2rem;
+    border-style: solid;
 }
 
 #yo {
-    background-color: #8D8A8A;
+    background-color: #EAEAEA;
     height: 21rem;
     width: 22rem;
     padding-top: 1rem;
+    padding-bottom: 0.5rem;
+    margin-left: 3rem;
+    border-radius: 20px;
+    border-color: black;
+    border-width: 0.2rem;
+    border-style: solid;
+}
 
+#cart_row_box {
+    display: flex;
+    flex-direction: row;
 }
 
 #price_box {
