--- a/client/src/Components/SingleItem/ItemDetails.css
+++ b/client/src/Components/SingleItem/ItemDetails.css
@@ -1,3 +1,14 @@
 .item-details-container { 
-    
+    font-size: 2em;
+    /* border-style: solid; 
+    border-width: 5px;
+    border-color: black;
+    border-radius: 5px; */
+    /* padding: 10px; */
+}
+
+.cart-button { 
+    width: 200px;
+    height: 50px;
+    /* margin-bottom: -100px; */
 }
