--- a/client/src/Components/SingleItem/SellerInfo.css
+++ b/client/src/Components/SingleItem/SellerInfo.css
@@ -7,14 +7,15 @@
     border: 5px;
     background-color: aliceblue;
     border-radius: 15px;
-    padding: 10px; 
+    /* padding: 10px;  */
     border-style: solid;
     border-color: black;
 }
 
 .profile-picture { 
     position: relative;
-    border-radius: 50%; 
+    border-radius: 20px 20px 20px 20px; 
+    height: 130px;
     width: 200px;
     margin-top: 50px;
     margin-bottom: 25px;
@@ -27,7 +28,7 @@
 .seller-info-heading { 
     position: absolute;
     font-size: 25px;
-    margin-top: 10px;
+    margin-top: 1px;
     margin-left: 45px;
     color: black;
 
