--- a/client/src/Components/SingleItem/ItemDetails.css
+++ b/client/src/Components/SingleItem/ItemDetails.css
@@ -8,7 +8,8 @@
 }
 
 .cart-button { 
-    width: 200px;
-    height: 50px;
+    width: 300px;
+    height: 100px;
+    /* justify-content: center; */
     /* margin-bottom: -100px; */
 }
