--- a/client/src/Pages/SellItem/SellItem.css
+++ b/client/src/Pages/SellItem/SellItem.css
@@ -47,6 +47,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    color: black;
 }
 /* CSS responsible for styling the id of sell_item_page which is the div id that the entire page is underneath it */
 
