Changed SignUp confirm password input field

--- a/client/src/Pages/SignUp/SignUp.css
+++ b/client/src/Pages/SignUp/SignUp.css
@@ -81,6 +81,17 @@ label {
     /* color:aqua; */
 }
 
+.loginInputConfirm {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    margin-top: 0px;
+    box-sizing: border-box;
+    background-color: aliceblue;
+    border-radius: 10px;
+    color: black;
+    /* color:aqua; */
+}
 /* Button styling */
 /* button {
     margin-top: 10px;
