--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -2,11 +2,11 @@
     width: 100%;
     height: 300px;
     border: 1px solid black;
-    background-color: white;
     color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: flex-end;
 }
 
 .footer > * {
@@ -70,14 +70,6 @@
 }
 
 .footerLinks {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 10px;
-    margin-bottom: 35px;
-}
-
-.footerLinks > * {
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100px;
