--- a/client/src/Pages/Listings/Listings.css
+++ b/client/src/Pages/Listings/Listings.css
@@ -2,10 +2,19 @@
 
 .listings {
     width: 100%;
+    height: 1100px;
     border: 1px solid black;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.listings > * {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -71,7 +80,8 @@
 /* ListingHeader Component */
 
 .listingHeader {
-    width: 100%;
+    width: 80%;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
