confirm Password Part 1

--- a/client/src/Pages/SignUp/SignUp.css
+++ b/client/src/Pages/SignUp/SignUp.css
@@ -75,6 +75,7 @@ label {
     box-sizing: border-box;
     background-color: aliceblue;
     border-radius: 10px;
+    color: black;
 }
 
 /* Button styling */
